$NetBSD: CHANGES,v 1.3636 2003/10/04 21:02:02 jschauma Exp $

Changes to the packages collection and infrastructure in 2003:

	Added iasp-2.1.1 [jlam 2003-01-01]
	Added ap-iasp-2.1.1 [jlam 2003-01-01]
	Updated bison to 1.875 [cjep 2003-01-01]
	Updated ups-nut to 1.2.1nb1 [lukem 2003-01-01]
	Updated tuxpaint to 2002.10.26nb2 [jmmv 2003-01-01]
	Updated sysbuild to 1.8 [jmmv 2003-01-01]
	Updated tcm to 2.01nb1 [jmmv 2003-01-01]
	Updated gnome-vfs to 1.0.3nb1 [rh 2003-01-02]
	Updated gnome-mime-data to 2.0.1nb2 [rh 2003-01-02]
	Updated iasp to 2.1.1nb1 [jlam 2003-01-02]
	Updated arts to 1.0.5.1 [skrll 2003-01-02]
	Updated kde3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdeaddons3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdeadmin3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdeartwork3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdebase3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdeedu3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdegames3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdegraphics3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdelibs3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdemultimedia3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdenetwork3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdepim3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdetoys3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdeutils3 to 3.0.5.1 [skrll 2003-01-02]
	Updated kdesdk3 to 3.0.5.1 [skrll 2003-01-02]
	Updated geneweb to 4.09 [wulf 2003-01-02]
	Updated mousetar to 20021217 [agc 2003-01-02]
	Updated aspell-slovak to 1.1 [salo 2003-01-02]
	Updated fnlib to 0.5nb2 [jmmv 2003-01-02]
	Updated p5-libwww to 5.67 [mjl 2003-01-02]
	Added p5-Class-ReturnValue-0.40 [mjl 2003-01-02]
	Added p5-Devel-StackTrace-1.02 [mjl 2003-01-02]
	Added p5-Test-Inline-0.15 [mjl 2003-01-02]
	Updated p5-DBIx-SearchBuilder to 0.76 [mjl 2003-01-02]
	Updated docbook-xsl to 1.58.1nb1 [grant 2003-01-02]
	Updated jdbc-postgresql to 7.3.1 [jlam 2003-01-02]
	Updated pkglint to 3.40 [atatat 2003-01-02]
	Updated pkglint to 3.41 [schmonz 2003-01-02]